// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Datagrid Snapshot Tests > should match snapshot with 'basic props' 1`] = `
<div
  class=overflow-auto relative w-full
  style=min-height: 150px; max-height: 100%; height: 100%;
>
  <table
    class=_table _table--md table table-fixed w-full
    data-ods=table
  >
    <thead
      class=sticky top-[-1px] z-10 bg-white overflow-hidden
    >
      <tr>
        <th
          class=text-left pl-4 whitespace-normal wrap-break-word
          style=word-break: break-word; width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          name
        </th>
        <th
          class=text-left pl-4 whitespace-normal wrap-break-word
          style=word-break: break-word; width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          age
        </th>
      </tr>
    </thead>
    <tbody
      class=relative p-0 overflow-hidden
      style=height: 98px;
    >
      <tr
        class=table overflow-hidden absolute top-0 table table-fixed
        data-index=0
        style=left: -1px; height: 49px; transform: translateY(-1px); width: 100%;
      >
        <td
          class=pl-4
          style=width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <div>
              John Doe
            </div>
          </div>
        </td>
        <td
          class=pl-4
          style=width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <div>
              30
            </div>
          </div>
        </td>
      </tr>
      <tr
        class=table overflow-hidden absolute top-0 table table-fixed
        data-index=1
        style=left: -1px; height: 49px; transform: translateY(47px); width: 100%;
      >
        <td
          class=pl-4
          style=width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <div>
              Jane Smith
            </div>
          </div>
        </td>
        <td
          class=pl-4
          style=width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <div>
              25
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Datagrid Snapshot Tests > should match snapshot with 'column visibility enabled' 1`] = `
<div
  class=overflow-auto relative w-full
  style=min-height: 150px; max-height: 100%; height: 100%;
>
  <table
    class=_table _table--md table table-fixed w-full
    data-ods=table
  >
    <thead
      class=sticky top-[-1px] z-10 bg-white overflow-hidden
    >
      <tr>
        <th
          class=text-left pl-4 whitespace-normal wrap-break-word
          style=word-break: break-word; width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          name
        </th>
        <th
          class=text-left pl-4 whitespace-normal wrap-break-word
          style=word-break: break-word; width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          age
        </th>
      </tr>
    </thead>
    <tbody
      class=relative p-0 overflow-hidden
      style=height: 98px;
    >
      <tr
        class=table overflow-hidden absolute top-0 table table-fixed
        data-index=0
        style=left: -1px; height: 49px; transform: translateY(-1px); width: 100%;
      >
        <td
          class=pl-4
          style=width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <div>
              John Doe
            </div>
          </div>
        </td>
        <td
          class=pl-4
          style=width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <div>
              30
            </div>
          </div>
        </td>
      </tr>
      <tr
        class=table overflow-hidden absolute top-0 table table-fixed
        data-index=1
        style=left: -1px; height: 49px; transform: translateY(47px); width: 100%;
      >
        <td
          class=pl-4
          style=width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <div>
              Jane Smith
            </div>
          </div>
        </td>
        <td
          class=pl-4
          style=width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <div>
              25
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Datagrid Snapshot Tests > should match snapshot with 'custom container height' 1`] = `
<div
  class=overflow-auto relative w-full
  style=min-height: 150px; max-height: 400px; height: 400px;
>
  <table
    class=_table _table--md table table-fixed w-full
    data-ods=table
  >
    <thead
      class=sticky top-[-1px] z-10 bg-white overflow-hidden
    >
      <tr>
        <th
          class=text-left pl-4 whitespace-normal wrap-break-word
          style=word-break: break-word; width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          name
        </th>
        <th
          class=text-left pl-4 whitespace-normal wrap-break-word
          style=word-break: break-word; width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          age
        </th>
      </tr>
    </thead>
    <tbody
      class=relative p-0 overflow-hidden
      style=height: 98px;
    >
      <tr
        class=table overflow-hidden absolute top-0 table table-fixed
        data-index=0
        style=left: -1px; height: 49px; transform: translateY(-1px); width: 100%;
      >
        <td
          class=pl-4
          style=width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <div>
              John Doe
            </div>
          </div>
        </td>
        <td
          class=pl-4
          style=width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <div>
              30
            </div>
          </div>
        </td>
      </tr>
      <tr
        class=table overflow-hidden absolute top-0 table table-fixed
        data-index=1
        style=left: -1px; height: 49px; transform: translateY(47px); width: 100%;
      >
        <td
          class=pl-4
          style=width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <div>
              Jane Smith
            </div>
          </div>
        </td>
        <td
          class=pl-4
          style=width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <div>
              25
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Datagrid Snapshot Tests > should match snapshot with 'empty data' 1`] = `
<div
  class=overflow-auto relative w-full
  style=min-height: 150px; max-height: 100%; height: 100%;
>
  <table
    class=_table _table--md table table-fixed w-full
    data-ods=table
  >
    <thead
      class=sticky top-[-1px] z-10 bg-white overflow-hidden
    >
      <tr>
        <th
          class=text-left pl-4 whitespace-normal wrap-break-word
          style=word-break: break-word; width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          name
        </th>
        <th
          class=text-left pl-4 whitespace-normal wrap-break-word
          style=word-break: break-word; width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          age
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class=h-[3.25rem] w-full
      >
        <td
          class=absolute text-center w-full py-[15px]
          style=border-right: 1px solid var(--ods-color-neutral-100); left: 0px;
        >
          <p
            class=_text _text--paragraph
            data-ods=text
          >
            Aucun résultat
          </p>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Datagrid Snapshot Tests > should match snapshot with 'filters enabled' 1`] = `
<div
  class=overflow-auto relative w-full
  style=min-height: 150px; max-height: 100%; height: 100%;
>
  <table
    class=_table _table--md table table-fixed w-full
    data-ods=table
  >
    <thead
      class=sticky top-[-1px] z-10 bg-white overflow-hidden
    >
      <tr>
        <th
          class=text-left pl-4 whitespace-normal wrap-break-word
          style=word-break: break-word; width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          name
        </th>
        <th
          class=text-left pl-4 whitespace-normal wrap-break-word
          style=word-break: break-word; width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          age
        </th>
      </tr>
    </thead>
    <tbody
      class=relative p-0 overflow-hidden
      style=height: 98px;
    >
      <tr
        class=table overflow-hidden absolute top-0 table table-fixed
        data-index=0
        style=left: -1px; height: 49px; transform: translateY(-1px); width: 100%;
      >
        <td
          class=pl-4
          style=width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <div>
              John Doe
            </div>
          </div>
        </td>
        <td
          class=pl-4
          style=width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <div>
              30
            </div>
          </div>
        </td>
      </tr>
      <tr
        class=table overflow-hidden absolute top-0 table table-fixed
        data-index=1
        style=left: -1px; height: 49px; transform: translateY(47px); width: 100%;
      >
        <td
          class=pl-4
          style=width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <div>
              Jane Smith
            </div>
          </div>
        </td>
        <td
          class=pl-4
          style=width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <div>
              25
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Datagrid Snapshot Tests > should match snapshot with 'large size' 1`] = `
<div
  class=overflow-auto relative w-full
  style=min-height: 150px; max-height: 100%; height: 100%;
>
  <table
    class=_table _table--lg table table-fixed w-full
    data-ods=table
  >
    <thead
      class=sticky top-[-1px] z-10 bg-white overflow-hidden
    >
      <tr>
        <th
          class=text-left pl-4 whitespace-normal wrap-break-word
          style=word-break: break-word; width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          name
        </th>
        <th
          class=text-left pl-4 whitespace-normal wrap-break-word
          style=word-break: break-word; width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          age
        </th>
      </tr>
    </thead>
    <tbody
      class=relative p-0 overflow-hidden
      style=height: 129px;
    >
      <tr
        class=table overflow-hidden absolute top-0 table table-fixed
        data-index=0
        style=left: -1px; height: 64.5px; transform: translateY(-1px); width: 100%;
      >
        <td
          class=pl-4
          style=width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <div>
              John Doe
            </div>
          </div>
        </td>
        <td
          class=pl-4
          style=width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <div>
              30
            </div>
          </div>
        </td>
      </tr>
      <tr
        class=table overflow-hidden absolute top-0 table table-fixed
        data-index=1
        style=left: -1px; height: 64.5px; transform: translateY(62.5px); width: 100%;
      >
        <td
          class=pl-4
          style=width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <div>
              Jane Smith
            </div>
          </div>
        </td>
        <td
          class=pl-4
          style=width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <div>
              25
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Datagrid Snapshot Tests > should match snapshot with 'loading state' 1`] = `
<div
  class=overflow-auto relative w-full
  style=min-height: 150px; max-height: 100%; height: 100%;
>
  <table
    class=_table _table--md table table-fixed w-full
    data-ods=table
  >
    <thead
      class=sticky top-[-1px] z-10 bg-white overflow-hidden
    >
      <tr>
        <th
          class=text-left pl-4 whitespace-normal wrap-break-word
          style=word-break: break-word; width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          name
        </th>
        <th
          class=text-left pl-4 whitespace-normal wrap-break-word
          style=word-break: break-word; width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          age
        </th>
      </tr>
    </thead>
    <tbody
      class=relative p-0 overflow-hidden
      style=height: 539px;
    >
      <tr
        class=table overflow-hidden absolute top-0 table table-fixed
        data-index=0
        style=left: -1px; height: 49px; transform: translateY(-1px); width: 100%;
      >
        <td
          class=pl-4
          style=width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <div>
              John Doe
            </div>
          </div>
        </td>
        <td
          class=pl-4
          style=width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <div>
              30
            </div>
          </div>
        </td>
      </tr>
      <tr
        class=table overflow-hidden absolute top-0 table table-fixed
        data-index=1
        style=left: -1px; height: 49px; transform: translateY(47px); width: 100%;
      >
        <td
          class=pl-4
          style=width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <div>
              Jane Smith
            </div>
          </div>
        </td>
        <td
          class=pl-4
          style=width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <div>
              25
            </div>
          </div>
        </td>
      </tr>
      <tr
        class=h-[50px]
      >
        <td
          class=overflow-hidden py-[8px]
        >
          <div
            aria-busy=true
            class=w-full
          >
            <div
              aria-hidden=true
              class=_skeleton
              data-ods=skeleton
            />
          </div>
        </td>
        <td
          class=overflow-hidden py-[8px]
        >
          <div
            aria-busy=true
            class=w-full
          >
            <div
              aria-hidden=true
              class=_skeleton
              data-ods=skeleton
            />
          </div>
        </td>
      </tr>
      <tr
        class=h-[50px]
      >
        <td
          class=overflow-hidden py-[8px]
        >
          <div
            aria-busy=true
            class=w-full
          >
            <div
              aria-hidden=true
              class=_skeleton
              data-ods=skeleton
            />
          </div>
        </td>
        <td
          class=overflow-hidden py-[8px]
        >
          <div
            aria-busy=true
            class=w-full
          >
            <div
              aria-hidden=true
              class=_skeleton
              data-ods=skeleton
            />
          </div>
        </td>
      </tr>
      <tr
        class=h-[50px]
      >
        <td
          class=overflow-hidden py-[8px]
        >
          <div
            aria-busy=true
            class=w-full
          >
            <div
              aria-hidden=true
              class=_skeleton
              data-ods=skeleton
            />
          </div>
        </td>
        <td
          class=overflow-hidden py-[8px]
        >
          <div
            aria-busy=true
            class=w-full
          >
            <div
              aria-hidden=true
              class=_skeleton
              data-ods=skeleton
            />
          </div>
        </td>
      </tr>
      <tr
        class=h-[50px]
      >
        <td
          class=overflow-hidden py-[8px]
        >
          <div
            aria-busy=true
            class=w-full
          >
            <div
              aria-hidden=true
              class=_skeleton
              data-ods=skeleton
            />
          </div>
        </td>
        <td
          class=overflow-hidden py-[8px]
        >
          <div
            aria-busy=true
            class=w-full
          >
            <div
              aria-hidden=true
              class=_skeleton
              data-ods=skeleton
            />
          </div>
        </td>
      </tr>
      <tr
        class=h-[50px]
      >
        <td
          class=overflow-hidden py-[8px]
        >
          <div
            aria-busy=true
            class=w-full
          >
            <div
              aria-hidden=true
              class=_skeleton
              data-ods=skeleton
            />
          </div>
        </td>
        <td
          class=overflow-hidden py-[8px]
        >
          <div
            aria-busy=true
            class=w-full
          >
            <div
              aria-hidden=true
              class=_skeleton
              data-ods=skeleton
            />
          </div>
        </td>
      </tr>
      <tr
        class=h-[50px]
      >
        <td
          class=overflow-hidden py-[8px]
        >
          <div
            aria-busy=true
            class=w-full
          >
            <div
              aria-hidden=true
              class=_skeleton
              data-ods=skeleton
            />
          </div>
        </td>
        <td
          class=overflow-hidden py-[8px]
        >
          <div
            aria-busy=true
            class=w-full
          >
            <div
              aria-hidden=true
              class=_skeleton
              data-ods=skeleton
            />
          </div>
        </td>
      </tr>
      <tr
        class=h-[50px]
      >
        <td
          class=overflow-hidden py-[8px]
        >
          <div
            aria-busy=true
            class=w-full
          >
            <div
              aria-hidden=true
              class=_skeleton
              data-ods=skeleton
            />
          </div>
        </td>
        <td
          class=overflow-hidden py-[8px]
        >
          <div
            aria-busy=true
            class=w-full
          >
            <div
              aria-hidden=true
              class=_skeleton
              data-ods=skeleton
            />
          </div>
        </td>
      </tr>
      <tr
        class=h-[50px]
      >
        <td
          class=overflow-hidden py-[8px]
        >
          <div
            aria-busy=true
            class=w-full
          >
            <div
              aria-hidden=true
              class=_skeleton
              data-ods=skeleton
            />
          </div>
        </td>
        <td
          class=overflow-hidden py-[8px]
        >
          <div
            aria-busy=true
            class=w-full
          >
            <div
              aria-hidden=true
              class=_skeleton
              data-ods=skeleton
            />
          </div>
        </td>
      </tr>
      <tr
        class=h-[50px]
      >
        <td
          class=overflow-hidden py-[8px]
        >
          <div
            aria-busy=true
            class=w-full
          >
            <div
              aria-hidden=true
              class=_skeleton
              data-ods=skeleton
            />
          </div>
        </td>
        <td
          class=overflow-hidden py-[8px]
        >
          <div
            aria-busy=true
            class=w-full
          >
            <div
              aria-hidden=true
              class=_skeleton
              data-ods=skeleton
            />
          </div>
        </td>
      </tr>
      <tr
        class=h-[50px]
      >
        <td
          class=overflow-hidden py-[8px]
        >
          <div
            aria-busy=true
            class=w-full
          >
            <div
              aria-hidden=true
              class=_skeleton
              data-ods=skeleton
            />
          </div>
        </td>
        <td
          class=overflow-hidden py-[8px]
        >
          <div
            aria-busy=true
            class=w-full
          >
            <div
              aria-hidden=true
              class=_skeleton
              data-ods=skeleton
            />
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Datagrid Snapshot Tests > should match snapshot with 'medium size' 1`] = `
<div
  class=overflow-auto relative w-full
  style=min-height: 150px; max-height: 100%; height: 100%;
>
  <table
    class=_table _table--md table table-fixed w-full
    data-ods=table
  >
    <thead
      class=sticky top-[-1px] z-10 bg-white overflow-hidden
    >
      <tr>
        <th
          class=text-left pl-4 whitespace-normal wrap-break-word
          style=word-break: break-word; width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          name
        </th>
        <th
          class=text-left pl-4 whitespace-normal wrap-break-word
          style=word-break: break-word; width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          age
        </th>
      </tr>
    </thead>
    <tbody
      class=relative p-0 overflow-hidden
      style=height: 98px;
    >
      <tr
        class=table overflow-hidden absolute top-0 table table-fixed
        data-index=0
        style=left: -1px; height: 49px; transform: translateY(-1px); width: 100%;
      >
        <td
          class=pl-4
          style=width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <div>
              John Doe
            </div>
          </div>
        </td>
        <td
          class=pl-4
          style=width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <div>
              30
            </div>
          </div>
        </td>
      </tr>
      <tr
        class=table overflow-hidden absolute top-0 table table-fixed
        data-index=1
        style=left: -1px; height: 49px; transform: translateY(47px); width: 100%;
      >
        <td
          class=pl-4
          style=width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <div>
              Jane Smith
            </div>
          </div>
        </td>
        <td
          class=pl-4
          style=width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <div>
              25
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Datagrid Snapshot Tests > should match snapshot with 'pagination' 1`] = `
<div
  class=overflow-auto relative w-full
  style=min-height: 150px; max-height: 100%; height: 100%;
>
  <table
    class=_table _table--md table table-fixed w-full
    data-ods=table
  >
    <thead
      class=sticky top-[-1px] z-10 bg-white overflow-hidden
    >
      <tr>
        <th
          class=text-left pl-4 whitespace-normal wrap-break-word
          style=word-break: break-word; width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          name
        </th>
        <th
          class=text-left pl-4 whitespace-normal wrap-break-word
          style=word-break: break-word; width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          age
        </th>
      </tr>
    </thead>
    <tbody
      class=relative p-0 overflow-hidden
      style=height: 98px;
    >
      <tr
        class=table overflow-hidden absolute top-0 table table-fixed
        data-index=0
        style=left: -1px; height: 49px; transform: translateY(-1px); width: 100%;
      >
        <td
          class=pl-4
          style=width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <div>
              John Doe
            </div>
          </div>
        </td>
        <td
          class=pl-4
          style=width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <div>
              30
            </div>
          </div>
        </td>
      </tr>
      <tr
        class=table overflow-hidden absolute top-0 table table-fixed
        data-index=1
        style=left: -1px; height: 49px; transform: translateY(47px); width: 100%;
      >
        <td
          class=pl-4
          style=width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <div>
              Jane Smith
            </div>
          </div>
        </td>
        <td
          class=pl-4
          style=width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <div>
              25
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Datagrid Snapshot Tests > should match snapshot with 'row selection' 1`] = `
<div
  class=overflow-auto relative w-full
  style=min-height: 150px; max-height: 100%; height: 100%;
>
  <table
    class=_table _table--md table table-fixed w-full
    data-ods=table
  >
    <thead
      class=sticky top-[-1px] z-10 bg-white overflow-hidden
    >
      <tr>
        <th
          class=text-left pl-4 whitespace-normal wrap-break-word
          style=word-break: break-word; width: 50px; min-width: 50px; max-width: 50px;
        >
          <label
            class=_checkbox
            data-ods=checkbox
            data-part=root
            data-scope=checkbox
            data-state=unchecked
            dir=ltr
            for=checkbox:select-all:input
            id=checkbox:select-all
          >
            <div
              aria-hidden=true
              class=_checkbox-control
              data-ods=checkbox-control
              data-part=control
              data-scope=checkbox
              data-state=unchecked
              dir=ltr
              id=checkbox:select-all:control
            >
              <div
                data-part=indicator
                data-scope=checkbox
                data-state=unchecked
                dir=ltr
                hidden=
              >
                <span
                  class=_icon _icon--check _checkbox-control__icon
                  data-ods=icon
                  role=presentation
                />
              </div>
              <div
                data-part=indicator
                data-scope=checkbox
                data-state=unchecked
                dir=ltr
                hidden=
              >
                <span
                  class=_icon _icon--minus _checkbox-control__icon
                  data-ods=icon
                  role=presentation
                />
              </div>
            </div>
            <input
              aria-invalid=false
              aria-labelledby=checkbox:select-all:label
              id=checkbox:select-all:input
              name=select-all
              style=border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap; word-wrap: normal;
              type=checkbox
              value=on
            />
          </label>
        </th>
        <th
          class=text-left pl-4 whitespace-normal wrap-break-word
          style=word-break: break-word; width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          name
        </th>
        <th
          class=text-left pl-4 whitespace-normal wrap-break-word
          style=word-break: break-word; width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          age
        </th>
      </tr>
    </thead>
    <tbody
      class=relative p-0 overflow-hidden
      style=height: 98px;
    >
      <tr
        class=table overflow-hidden absolute top-0 table table-fixed
        data-index=0
        style=left: -1px; height: 49px; transform: translateY(-1px); width: 100%;
      >
        <td
          class=pl-4
          style=width: 50px; min-width: 50px; max-width: 50px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <label
              class=_checkbox
              data-ods=checkbox
              data-part=root
              data-scope=checkbox
              data-state=unchecked
              dir=ltr
              for=checkbox:1:input
              id=checkbox:1
            >
              <div
                aria-hidden=true
                class=_checkbox-control
                data-ods=checkbox-control
                data-part=control
                data-scope=checkbox
                data-state=unchecked
                dir=ltr
                id=checkbox:1:control
              >
                <div
                  data-part=indicator
                  data-scope=checkbox
                  data-state=unchecked
                  dir=ltr
                  hidden=
                >
                  <span
                    class=_icon _icon--check _checkbox-control__icon
                    data-ods=icon
                    role=presentation
                  />
                </div>
                <div
                  data-part=indicator
                  data-scope=checkbox
                  data-state=unchecked
                  dir=ltr
                  hidden=
                >
                  <span
                    class=_icon _icon--minus _checkbox-control__icon
                    data-ods=icon
                    role=presentation
                  />
                </div>
              </div>
              <input
                aria-invalid=false
                aria-labelledby=checkbox:1:label
                id=checkbox:1:input
                name=select-1
                style=border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap; word-wrap: normal;
                type=checkbox
                value=on
              />
            </label>
          </div>
        </td>
        <td
          class=pl-4
          style=width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <div>
              John Doe
            </div>
          </div>
        </td>
        <td
          class=pl-4
          style=width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <div>
              30
            </div>
          </div>
        </td>
      </tr>
      <tr
        class=table overflow-hidden absolute top-0 table table-fixed
        data-index=1
        style=left: -1px; height: 49px; transform: translateY(47px); width: 100%;
      >
        <td
          class=pl-4
          style=width: 50px; min-width: 50px; max-width: 50px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <label
              class=_checkbox
              data-ods=checkbox
              data-part=root
              data-scope=checkbox
              data-state=unchecked
              dir=ltr
              for=checkbox:2:input
              id=checkbox:2
            >
              <div
                aria-hidden=true
                class=_checkbox-control
                data-ods=checkbox-control
                data-part=control
                data-scope=checkbox
                data-state=unchecked
                dir=ltr
                id=checkbox:2:control
              >
                <div
                  data-part=indicator
                  data-scope=checkbox
                  data-state=unchecked
                  dir=ltr
                  hidden=
                >
                  <span
                    class=_icon _icon--check _checkbox-control__icon
                    data-ods=icon
                    role=presentation
                  />
                </div>
                <div
                  data-part=indicator
                  data-scope=checkbox
                  data-state=unchecked
                  dir=ltr
                  hidden=
                >
                  <span
                    class=_icon _icon--minus _checkbox-control__icon
                    data-ods=icon
                    role=presentation
                  />
                </div>
              </div>
              <input
                aria-invalid=false
                aria-labelledby=checkbox:2:label
                id=checkbox:2:input
                name=select-2
                style=border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap; word-wrap: normal;
                type=checkbox
                value=on
              />
            </label>
          </div>
        </td>
        <td
          class=pl-4
          style=width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <div>
              Jane Smith
            </div>
          </div>
        </td>
        <td
          class=pl-4
          style=width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <div>
              25
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Datagrid Snapshot Tests > should match snapshot with 'search enabled' 1`] = `
<div
  class=overflow-auto relative w-full
  style=min-height: 150px; max-height: 100%; height: 100%;
>
  <table
    class=_table _table--md table table-fixed w-full
    data-ods=table
  >
    <thead
      class=sticky top-[-1px] z-10 bg-white overflow-hidden
    >
      <tr>
        <th
          class=text-left pl-4 whitespace-normal wrap-break-word
          style=word-break: break-word; width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          name
        </th>
        <th
          class=text-left pl-4 whitespace-normal wrap-break-word
          style=word-break: break-word; width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          age
        </th>
      </tr>
    </thead>
    <tbody
      class=relative p-0 overflow-hidden
      style=height: 98px;
    >
      <tr
        class=table overflow-hidden absolute top-0 table table-fixed
        data-index=0
        style=left: -1px; height: 49px; transform: translateY(-1px); width: 100%;
      >
        <td
          class=pl-4
          style=width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <div>
              John Doe
            </div>
          </div>
        </td>
        <td
          class=pl-4
          style=width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <div>
              30
            </div>
          </div>
        </td>
      </tr>
      <tr
        class=table overflow-hidden absolute top-0 table table-fixed
        data-index=1
        style=left: -1px; height: 49px; transform: translateY(47px); width: 100%;
      >
        <td
          class=pl-4
          style=width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <div>
              Jane Smith
            </div>
          </div>
        </td>
        <td
          class=pl-4
          style=width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <div>
              25
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Datagrid Snapshot Tests > should match snapshot with 'small size' 1`] = `
<div
  class=overflow-auto relative w-full
  style=min-height: 150px; max-height: 100%; height: 100%;
>
  <table
    class=_table _table--sm table table-fixed w-full
    data-ods=table
  >
    <thead
      class=sticky top-[-1px] z-10 bg-white overflow-hidden
    >
      <tr>
        <th
          class=text-left pl-4 whitespace-normal wrap-break-word
          style=word-break: break-word; width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          name
        </th>
        <th
          class=text-left pl-4 whitespace-normal wrap-break-word
          style=word-break: break-word; width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          age
        </th>
      </tr>
    </thead>
    <tbody
      class=relative p-0 overflow-hidden
      style=height: 65px;
    >
      <tr
        class=table overflow-hidden absolute top-0 table table-fixed
        data-index=0
        style=left: -1px; height: 32.5px; transform: translateY(-1px); width: 100%;
      >
        <td
          class=pl-4
          style=width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <div>
              John Doe
            </div>
          </div>
        </td>
        <td
          class=pl-4
          style=width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <div>
              30
            </div>
          </div>
        </td>
      </tr>
      <tr
        class=table overflow-hidden absolute top-0 table table-fixed
        data-index=1
        style=left: -1px; height: 32.5px; transform: translateY(30.5px); width: 100%;
      >
        <td
          class=pl-4
          style=width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <div>
              Jane Smith
            </div>
          </div>
        </td>
        <td
          class=pl-4
          style=width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <div>
              25
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Datagrid Snapshot Tests > should match snapshot with 'sorting enabled' 1`] = `
<div
  class=overflow-auto relative w-full
  style=min-height: 150px; max-height: 100%; height: 100%;
>
  <table
    class=_table _table--md table table-fixed w-full
    data-ods=table
  >
    <thead
      class=sticky top-[-1px] z-10 bg-white overflow-hidden
    >
      <tr>
        <th
          class=text-left pl-4 whitespace-normal wrap-break-word
          style=word-break: break-word; width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          <div
            class=cursor-pointer select-none h-[20px] h-auto
            data-testid=header-name
          >
            <span
              class=whitespace-normal wrap-break-word
              style=word-break: break-word;
            >
              name
            </span>
            <span
              class=align-middle inline-block pl-1 -mt-1
            >
              <span
                class=_icon _icon--arrow-up
                data-ods=icon
                role=presentation
              />
            </span>
          </div>
        </th>
        <th
          class=text-left pl-4 whitespace-normal wrap-break-word
          style=word-break: break-word; width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          <div
            class=cursor-pointer select-none h-[20px] h-auto
            data-testid=header-age
          >
            <span
              class=whitespace-normal wrap-break-word
              style=word-break: break-word;
            >
              age
            </span>
            <span
              class=align-middle inline-block pl-1 -mt-1
            >
              <span
                class=_icon _icon--arrow-down invisible
                data-ods=icon
                role=presentation
              />
            </span>
          </div>
        </th>
      </tr>
    </thead>
    <tbody
      class=relative p-0 overflow-hidden
      style=height: 98px;
    >
      <tr
        class=table overflow-hidden absolute top-0 table table-fixed
        data-index=0
        style=left: -1px; height: 49px; transform: translateY(-1px); width: 100%;
      >
        <td
          class=pl-4
          style=width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <div>
              Jane Smith
            </div>
          </div>
        </td>
        <td
          class=pl-4
          style=width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <div>
              25
            </div>
          </div>
        </td>
      </tr>
      <tr
        class=table overflow-hidden absolute top-0 table table-fixed
        data-index=1
        style=left: -1px; height: 49px; transform: translateY(47px); width: 100%;
      >
        <td
          class=pl-4
          style=width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <div>
              John Doe
            </div>
          </div>
        </td>
        <td
          class=pl-4
          style=width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <div>
              30
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Datagrid Snapshot Tests > should match snapshot with all features enabled 1`] = `
<div
  class=overflow-auto relative w-full
  style=min-height: 150px; max-height: 500px; height: 500px;
>
  <table
    class=_table _table--md table table-fixed w-full
    data-ods=table
  >
    <thead
      class=sticky top-[-1px] z-10 bg-white overflow-hidden
    >
      <tr>
        <th
          class=text-left pl-4 whitespace-normal wrap-break-word
          style=word-break: break-word; width: 50px; min-width: 50px; max-width: 50px;
        >
          <div
            class=h-[20px] h-auto
            data-testid=header-expander
          >
            <span
              class=whitespace-normal wrap-break-word
              style=word-break: break-word;
            />
            <span
              class=align-middle inline-block pl-1 -mt-1
            >
              <span
                class=_icon _icon--arrow-down invisible
                data-ods=icon
                role=presentation
              />
            </span>
          </div>
        </th>
        <th
          class=text-left pl-4 whitespace-normal wrap-break-word
          style=word-break: break-word; width: 50px; min-width: 50px; max-width: 50px;
        >
          <div
            class=h-[20px] h-auto
            data-testid=header-row-selection
          >
            <span
              class=whitespace-normal wrap-break-word
              style=word-break: break-word;
            >
              <label
                class=_checkbox
                data-ods=checkbox
                data-part=root
                data-scope=checkbox
                data-state=unchecked
                dir=ltr
                for=checkbox:select-all:input
                id=checkbox:select-all
              >
                <div
                  aria-hidden=true
                  class=_checkbox-control
                  data-ods=checkbox-control
                  data-part=control
                  data-scope=checkbox
                  data-state=unchecked
                  dir=ltr
                  id=checkbox:select-all:control
                >
                  <div
                    data-part=indicator
                    data-scope=checkbox
                    data-state=unchecked
                    dir=ltr
                    hidden=
                  >
                    <span
                      class=_icon _icon--check _checkbox-control__icon
                      data-ods=icon
                      role=presentation
                    />
                  </div>
                  <div
                    data-part=indicator
                    data-scope=checkbox
                    data-state=unchecked
                    dir=ltr
                    hidden=
                  >
                    <span
                      class=_icon _icon--minus _checkbox-control__icon
                      data-ods=icon
                      role=presentation
                    />
                  </div>
                </div>
                <input
                  aria-invalid=false
                  aria-labelledby=checkbox:select-all:label
                  id=checkbox:select-all:input
                  name=select-all
                  style=border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap; word-wrap: normal;
                  type=checkbox
                  value=on
                />
              </label>
            </span>
            <span
              class=align-middle inline-block pl-1 -mt-1
            >
              <span
                class=_icon _icon--arrow-down invisible
                data-ods=icon
                role=presentation
              />
            </span>
          </div>
        </th>
        <th
          class=text-left pl-4 whitespace-normal wrap-break-word
          style=word-break: break-word; width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          <div
            class=cursor-pointer select-none h-[20px] h-auto
            data-testid=header-name
          >
            <span
              class=whitespace-normal wrap-break-word
              style=word-break: break-word;
            >
              name
            </span>
            <span
              class=align-middle inline-block pl-1 -mt-1
            >
              <span
                class=_icon _icon--arrow-up
                data-ods=icon
                role=presentation
              />
            </span>
          </div>
        </th>
        <th
          class=text-left pl-4 whitespace-normal wrap-break-word
          style=word-break: break-word; width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          <div
            class=cursor-pointer select-none h-[20px] h-auto
            data-testid=header-age
          >
            <span
              class=whitespace-normal wrap-break-word
              style=word-break: break-word;
            >
              age
            </span>
            <span
              class=align-middle inline-block pl-1 -mt-1
            >
              <span
                class=_icon _icon--arrow-down invisible
                data-ods=icon
                role=presentation
              />
            </span>
          </div>
        </th>
      </tr>
    </thead>
    <tbody
      class=relative p-0 overflow-hidden
      style=height: 98px;
    >
      <tr
        class=table overflow-hidden absolute top-0 table table-fixed
        data-index=0
        style=left: -1px; height: 49px; transform: translateY(-1px); width: 100%;
      >
        <td
          class=pl-4
          style=width: 50px; min-width: 50px; max-width: 50px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <div
              style=padding-left: 0rem;
            >
              <button
                class=_button _button--primary _button--sm _button--ghost m-0 p-0
                data-ods=button
                data-testid=manager-button
                type=button
              >
                <span
                  class=_icon _icon--chevron-right
                  data-ods=icon
                  role=presentation
                />
              </button>
            </div>
          </div>
        </td>
        <td
          class=pl-4
          style=width: 50px; min-width: 50px; max-width: 50px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <label
              class=_checkbox
              data-ods=checkbox
              data-part=root
              data-scope=checkbox
              data-state=unchecked
              dir=ltr
              for=checkbox:1:input
              id=checkbox:1
            >
              <div
                aria-hidden=true
                class=_checkbox-control
                data-ods=checkbox-control
                data-part=control
                data-scope=checkbox
                data-state=unchecked
                dir=ltr
                id=checkbox:1:control
              >
                <div
                  data-part=indicator
                  data-scope=checkbox
                  data-state=unchecked
                  dir=ltr
                  hidden=
                >
                  <span
                    class=_icon _icon--check _checkbox-control__icon
                    data-ods=icon
                    role=presentation
                  />
                </div>
                <div
                  data-part=indicator
                  data-scope=checkbox
                  data-state=unchecked
                  dir=ltr
                  hidden=
                >
                  <span
                    class=_icon _icon--minus _checkbox-control__icon
                    data-ods=icon
                    role=presentation
                  />
                </div>
              </div>
              <input
                aria-invalid=false
                aria-labelledby=checkbox:1:label
                id=checkbox:1:input
                name=select-1
                style=border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap; word-wrap: normal;
                type=checkbox
                value=on
              />
            </label>
          </div>
        </td>
        <td
          class=pl-4
          style=width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <div>
              John Doe
            </div>
          </div>
        </td>
        <td
          class=pl-4
          style=width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <div>
              30
            </div>
          </div>
        </td>
      </tr>
      <tr
        class=table overflow-hidden absolute top-0 table table-fixed
        data-index=1
        style=left: -1px; height: 49px; transform: translateY(47px); width: 100%;
      >
        <td
          class=pl-4
          style=width: 50px; min-width: 50px; max-width: 50px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <div
              style=padding-left: 0rem;
            >
              <button
                class=_button _button--primary _button--sm _button--ghost m-0 p-0
                data-ods=button
                data-testid=manager-button
                type=button
              >
                <span
                  class=_icon _icon--chevron-right
                  data-ods=icon
                  role=presentation
                />
              </button>
            </div>
          </div>
        </td>
        <td
          class=pl-4
          style=width: 50px; min-width: 50px; max-width: 50px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <label
              class=_checkbox
              data-ods=checkbox
              data-part=root
              data-scope=checkbox
              data-state=unchecked
              dir=ltr
              for=checkbox:2:input
              id=checkbox:2
            >
              <div
                aria-hidden=true
                class=_checkbox-control
                data-ods=checkbox-control
                data-part=control
                data-scope=checkbox
                data-state=unchecked
                dir=ltr
                id=checkbox:2:control
              >
                <div
                  data-part=indicator
                  data-scope=checkbox
                  data-state=unchecked
                  dir=ltr
                  hidden=
                >
                  <span
                    class=_icon _icon--check _checkbox-control__icon
                    data-ods=icon
                    role=presentation
                  />
                </div>
                <div
                  data-part=indicator
                  data-scope=checkbox
                  data-state=unchecked
                  dir=ltr
                  hidden=
                >
                  <span
                    class=_icon _icon--minus _checkbox-control__icon
                    data-ods=icon
                    role=presentation
                  />
                </div>
              </div>
              <input
                aria-invalid=false
                aria-labelledby=checkbox:2:label
                id=checkbox:2:input
                name=select-2
                style=border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap; word-wrap: normal;
                type=checkbox
                value=on
              />
            </label>
          </div>
        </td>
        <td
          class=pl-4
          style=width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <div>
              Jane Smith
            </div>
          </div>
        </td>
        <td
          class=pl-4
          style=width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <div>
              25
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Datagrid Snapshot Tests > should match snapshot with conditional row selection 1`] = `
<div
  class=overflow-auto relative w-full
  style=min-height: 150px; max-height: 100%; height: 100%;
>
  <table
    class=_table _table--md table table-fixed w-full
    data-ods=table
  >
    <thead
      class=sticky top-[-1px] z-10 bg-white overflow-hidden
    >
      <tr>
        <th
          class=text-left pl-4 whitespace-normal wrap-break-word
          style=word-break: break-word; width: 50px; min-width: 50px; max-width: 50px;
        >
          <label
            class=_checkbox
            data-ods=checkbox
            data-part=root
            data-scope=checkbox
            data-state=unchecked
            dir=ltr
            for=checkbox:select-all:input
            id=checkbox:select-all
          >
            <div
              aria-hidden=true
              class=_checkbox-control
              data-ods=checkbox-control
              data-part=control
              data-scope=checkbox
              data-state=unchecked
              dir=ltr
              id=checkbox:select-all:control
            >
              <div
                data-part=indicator
                data-scope=checkbox
                data-state=unchecked
                dir=ltr
                hidden=
              >
                <span
                  class=_icon _icon--check _checkbox-control__icon
                  data-ods=icon
                  role=presentation
                />
              </div>
              <div
                data-part=indicator
                data-scope=checkbox
                data-state=unchecked
                dir=ltr
                hidden=
              >
                <span
                  class=_icon _icon--minus _checkbox-control__icon
                  data-ods=icon
                  role=presentation
                />
              </div>
            </div>
            <input
              aria-invalid=false
              aria-labelledby=checkbox:select-all:label
              id=checkbox:select-all:input
              name=select-all
              style=border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap; word-wrap: normal;
              type=checkbox
              value=on
            />
          </label>
        </th>
        <th
          class=text-left pl-4 whitespace-normal wrap-break-word
          style=word-break: break-word; width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          name
        </th>
        <th
          class=text-left pl-4 whitespace-normal wrap-break-word
          style=word-break: break-word; width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          age
        </th>
      </tr>
    </thead>
    <tbody
      class=relative p-0 overflow-hidden
      style=height: 98px;
    >
      <tr
        class=table overflow-hidden absolute top-0 table table-fixed
        data-index=0
        style=left: -1px; height: 49px; transform: translateY(-1px); width: 100%;
      >
        <td
          class=pl-4
          style=width: 50px; min-width: 50px; max-width: 50px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <label
              class=_checkbox
              data-disabled=
              data-ods=checkbox
              data-part=root
              data-scope=checkbox
              data-state=unchecked
              dir=ltr
              for=checkbox:1:input
              id=checkbox:1
            >
              <div
                aria-hidden=true
                class=_checkbox-control
                data-disabled=
                data-ods=checkbox-control
                data-part=control
                data-scope=checkbox
                data-state=unchecked
                dir=ltr
                id=checkbox:1:control
              >
                <div
                  data-disabled=
                  data-part=indicator
                  data-scope=checkbox
                  data-state=unchecked
                  dir=ltr
                  hidden=
                >
                  <span
                    class=_icon _icon--check _checkbox-control__icon
                    data-ods=icon
                    role=presentation
                  />
                </div>
                <div
                  data-disabled=
                  data-part=indicator
                  data-scope=checkbox
                  data-state=unchecked
                  dir=ltr
                  hidden=
                >
                  <span
                    class=_icon _icon--minus _checkbox-control__icon
                    data-ods=icon
                    role=presentation
                  />
                </div>
              </div>
              <input
                aria-invalid=false
                aria-labelledby=checkbox:1:label
                disabled=
                id=checkbox:1:input
                name=select-1
                style=border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap; word-wrap: normal;
                type=checkbox
                value=on
              />
            </label>
          </div>
        </td>
        <td
          class=pl-4
          style=width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <div>
              John Doe
            </div>
          </div>
        </td>
        <td
          class=pl-4
          style=width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <div>
              30
            </div>
          </div>
        </td>
      </tr>
      <tr
        class=table overflow-hidden absolute top-0 table table-fixed
        data-index=1
        style=left: -1px; height: 49px; transform: translateY(47px); width: 100%;
      >
        <td
          class=pl-4
          style=width: 50px; min-width: 50px; max-width: 50px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <label
              class=_checkbox
              data-ods=checkbox
              data-part=root
              data-scope=checkbox
              data-state=unchecked
              dir=ltr
              for=checkbox:2:input
              id=checkbox:2
            >
              <div
                aria-hidden=true
                class=_checkbox-control
                data-ods=checkbox-control
                data-part=control
                data-scope=checkbox
                data-state=unchecked
                dir=ltr
                id=checkbox:2:control
              >
                <div
                  data-part=indicator
                  data-scope=checkbox
                  data-state=unchecked
                  dir=ltr
                  hidden=
                >
                  <span
                    class=_icon _icon--check _checkbox-control__icon
                    data-ods=icon
                    role=presentation
                  />
                </div>
                <div
                  data-part=indicator
                  data-scope=checkbox
                  data-state=unchecked
                  dir=ltr
                  hidden=
                >
                  <span
                    class=_icon _icon--minus _checkbox-control__icon
                    data-ods=icon
                    role=presentation
                  />
                </div>
              </div>
              <input
                aria-invalid=false
                aria-labelledby=checkbox:2:label
                id=checkbox:2:input
                name=select-2
                style=border: 0px; height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap; word-wrap: normal;
                type=checkbox
                value=on
              />
            </label>
          </div>
        </td>
        <td
          class=pl-4
          style=width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <div>
              Jane Smith
            </div>
          </div>
        </td>
        <td
          class=pl-4
          style=width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <div>
              25
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Datagrid Snapshot Tests > should match snapshot with expandable rows 1`] = `
<div
  class=overflow-auto relative w-full
  style=min-height: 150px; max-height: 100%; height: 100%;
>
  <table
    class=_table _table--md table table-fixed w-full
    data-ods=table
  >
    <thead
      class=sticky top-[-1px] z-10 bg-white overflow-hidden
    >
      <tr>
        <th
          class=text-left pl-4 whitespace-normal wrap-break-word
          style=word-break: break-word; width: 50px; min-width: 50px; max-width: 50px;
        />
        <th
          class=text-left pl-4 whitespace-normal wrap-break-word
          style=word-break: break-word; width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          name
        </th>
        <th
          class=text-left pl-4 whitespace-normal wrap-break-word
          style=word-break: break-word; width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          age
        </th>
      </tr>
    </thead>
    <tbody
      class=relative p-0 overflow-hidden
      style=height: 98px;
    >
      <tr
        class=table overflow-hidden absolute top-0 table table-fixed
        data-index=0
        style=left: -1px; height: 49px; transform: translateY(-1px); width: 100%;
      >
        <td
          class=pl-4
          style=width: 50px; min-width: 50px; max-width: 50px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <div
              style=padding-left: 0rem;
            >
              <button
                class=_button _button--primary _button--sm _button--ghost m-0 p-0
                data-ods=button
                data-testid=manager-button
                type=button
              >
                <span
                  class=_icon _icon--chevron-right
                  data-ods=icon
                  role=presentation
                />
              </button>
            </div>
          </div>
        </td>
        <td
          class=pl-4
          style=width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <div>
              John Doe
            </div>
          </div>
        </td>
        <td
          class=pl-4
          style=width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <div>
              30
            </div>
          </div>
        </td>
      </tr>
      <tr
        class=table overflow-hidden absolute top-0 table table-fixed
        data-index=1
        style=left: -1px; height: 49px; transform: translateY(47px); width: 100%;
      >
        <td
          class=pl-4
          style=width: 50px; min-width: 50px; max-width: 50px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <div
              style=padding-left: 0rem;
            >
              <button
                class=_button _button--primary _button--sm _button--ghost m-0 p-0
                data-ods=button
                data-testid=manager-button
                type=button
              >
                <span
                  class=_icon _icon--chevron-right
                  data-ods=icon
                  role=presentation
                />
              </button>
            </div>
          </div>
        </td>
        <td
          class=pl-4
          style=width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <div>
              Jane Smith
            </div>
          </div>
        </td>
        <td
          class=pl-4
          style=width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <div>
              25
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Datagrid Snapshot Tests > should match snapshot with hideHeader enabled 1`] = `
<div
  class=overflow-auto relative w-full
  style=min-height: 150px; max-height: 100%; height: 100%;
>
  <table
    class=_table _table--md table table-fixed w-full
    data-ods=table
  >
    <tbody
      class=relative p-0 overflow-hidden
      style=height: 98px;
    >
      <tr
        class=table overflow-hidden absolute top-0 table table-fixed
        data-index=0
        style=left: 0px; height: 49px; transform: translateY(0px); width: calc(100% - 1px);
      >
        <td
          class=pl-4
          style=width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <div>
              John Doe
            </div>
          </div>
        </td>
        <td
          class=pl-4
          style=width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <div>
              30
            </div>
          </div>
        </td>
      </tr>
      <tr
        class=table overflow-hidden absolute top-0 table table-fixed
        data-index=1
        style=left: 0px; height: 49px; transform: translateY(49px); width: calc(100% - 1px);
      >
        <td
          class=pl-4
          style=width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <div>
              Jane Smith
            </div>
          </div>
        </td>
        <td
          class=pl-4
          style=width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <div>
              25
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Datagrid Snapshot Tests > should match snapshot with striped variant 1`] = `
<div
  class=overflow-auto relative w-full
  style=min-height: 150px; max-height: 100%; height: 100%;
>
  <table
    class=_table _table--md _table--striped table table-fixed w-full
    data-ods=table
  >
    <thead
      class=sticky top-[-1px] z-10 bg-white overflow-hidden
    >
      <tr>
        <th
          class=text-left pl-4 whitespace-normal wrap-break-word
          style=word-break: break-word; width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          name
        </th>
        <th
          class=text-left pl-4 whitespace-normal wrap-break-word
          style=word-break: break-word; width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          age
        </th>
      </tr>
    </thead>
    <tbody
      class=relative p-0 overflow-hidden
      style=height: 98px;
    >
      <tr
        class=table overflow-hidden absolute top-0 table table-fixed
        data-index=0
        style=left: -1px; height: 49px; transform: translateY(-1px); width: 100%;
      >
        <td
          class=pl-4
          style=width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <div>
              John Doe
            </div>
          </div>
        </td>
        <td
          class=pl-4
          style=width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <div>
              30
            </div>
          </div>
        </td>
      </tr>
      <tr
        class=table overflow-hidden absolute top-0 table table-fixed
        data-index=1
        style=left: -1px; height: 49px; transform: translateY(47px); width: 100%;
      >
        <td
          class=pl-4
          style=width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <div>
              Jane Smith
            </div>
          </div>
        </td>
        <td
          class=pl-4
          style=width: 150px; min-width: 20px; max-width: 9007199254740991px;
        >
          <div
            class=overflow-hidden text-ellipsis flex items-center w-full
            style=line-height: 1;
          >
            <div>
              25
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
